--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service_edu</module>
+        <module>service-oss</module>
     </modules>
 
     <artifactId>service</artifactId>
@@ -21,6 +22,8 @@
     </properties>
 
     <dependencies>
+
+
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>service_base</artifactId>
