--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -13,6 +13,11 @@ spring.datasource.password=root
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#mybatis\u65E5\u5FD7
-#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis\u65E5\u5FD7
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+#\u914D\u7F6Emapper xml\u6587\u4EF6\u7684\u8DEF\u5F84
+mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
+
+# nacos\u670D\u52A1\u5730\u5740
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
